# sko

./: .coverage  .gitignore  arbeitslosigkeit.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/: 2.1 Arbeitslosenquoten.xlsx  2.2 Jugendarbeitslosenquoten.xlsx  neue_daten_roh.csv  training_data.csv
db/: V1__init_schema.sql  setup_db.py
models/: model.pkl
src/: extract_data.py  ingest_data.py  predict.py  train.py
tests/: test_extract_data.py  test_ingest_data.py  test_pipeline.py  test_pipeline_quality.py  test_predict.py  test_setup_db.py  test_train.py
